<resources>
    <string name="app_name">Creighton</string>
    <string name="observation">Спостереження</string>

    <string name="submit">Зберегти</string>
    <string name="temperature">Температура</string>
    <string name="sex">Співжиття (I)</string>
    <string name="kegel">Вправа Кегеля (КE)</string>
    <string name="notes">Нотатки</string>

    <string name="blood">Кровотеча</string>
    <string name="brown">Коричневе або чорне плямлення (B)</string>
    <string name="veryLight">Дуже помірна кровотеча (VL)</string>
    <string name="light">Помірна кровотеча (L)</string>
    <string name="moderate">Кровотеча середньої інтенсивності (M)</string>
    <string name="heavy">Рясна кровотеча (H)</string>

    <string name="feelings">Відчуття</string>
    <string name="noLubrication">Не слизько (0–4)</string>
    <string name="lubrication">Слизько (L)</string>
    <string name="damp">Вогко</string>
    <string name="wet">Мокро</string>
    <string name="shiny">Блискуче</string>

    <string name="look">Вигляд</string>
    <string name="cloudy">Мутний білий (C)</string>
    <string name="cloudyClear">Мутно-прозорий (C/K)</string>
    <string name="clear">Прозорий (K)</string>
    <string name="yellow">Жовтий (Y)</string>
    <string name="gluey">Гумоподібний (G)</string>
    <string name="pasty">Кремоподібний (P)</string>

    <string name="stretch">Тягучість</string>
    <string name="sticky"><![CDATA[Малотягучий < 0.5 см (6)]]></string>
    <string name="tacky">Середньотягучий 1 – 2 см (8)</string>
    <string name="stretchy"><![CDATA[Дуже тягучий > 2.5 см (10)]]></string>

    <string name="today">Сьогодні:</string>
</resources>
