<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/bloodDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableRight="@drawable/dropdown_icon"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/blood"
        android:textColor="#000"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/bloodSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/brown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/brown" />

        <RadioButton
            android:id="@+id/veryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/veryLight" />

        <RadioButton
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/moderate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/moderate" />

        <RadioButton
            android:id="@+id/heavy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/heavy" />

    </RadioGroup>

</LinearLayout>
